7/1/23 logout btn styling on mobile fixed, error message displays on failed login attempts, Register DOB styling improved

--- a/EmployeeManagementSystem/EMS/Styles/Identity/login.scss
+++ b/EmployeeManagementSystem/EMS/Styles/Identity/login.scss
@@ -56,6 +56,13 @@
     }
   }
 
+  .failed-login-err {
+    top: 43.8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
   // mobile styles
   @media (max-width: $bmaxTablet) {
     form {
